alterando titulo da pagina e desc meta tag

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PayScheduler</title>
-    <meta name="description" content="Cobranças agendadas" />
+    <title>Felipe Oliveira - Full Stack Software Developer</title>
+    <meta name="description" content="Meu CV online e portfólio. Entre nesse link e tenha acesso ao meu currículo profissional e saiba um pouco mais sobre minha trajetória." />
   </head>
   <body>
     <div id="app"></div>
