updating job page

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Felipe Oliveira - Full Stack Software Developer</title>
     <meta name="description" content="Meu CV online e portfólio. Entre nesse link e tenha acesso ao meu currículo profissional e saiba um pouco mais sobre minha trajetória." />
+    <meta property="og:title" content="Felipe Oliveira - CV e portfólio" />
+    <meta property="og:description" content="Site profissional e portfólio de Felipe Oliveira. Entre e tenha as informações mais atualizadas sobre sua carreira." />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/49501201?s=400&u=914ffb36563ce4b9a3e2f39d727b1962e025f121&v=4" />
+    <meta property="og:url" content="https://www.felipeoliveira.online" />
   </head>
   <body>
     <div id="app"></div>
